Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -625,7 +625,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.execute(\"\"\"SELECT hits + BB as on_base FROM babe_ruth_stats WHERE on_\"\"\")\n",
+    "c.execute(\"\"\"SELECT hits + BB as on_base FROM babe_ruth_stats WHERE on_base >300\"\"\")\n",
     "df = pd.DataFrame(c.fetchall())\n",
     "df.columns = [i[0] for i in c.description]\n",
     "df"
